@@ -12,6 +12,7 @@ $breedfunc = array
 	'ios12-getcdpstatus-main'  => 'ios12ReadCDPStatus',
 	'ios12-getlldpstatus-main' => 'ios12ReadLLDPStatus',
 	'ios12-get8021q-main'      => 'ios12ReadVLANConfig',
+	'ios12-get8021q-swports'   => 'ios12ReadSwitchPortList',
 	'ios12-get8021q-top'       => 'ios12ScanTopLevel',
 	'ios12-get8021q-readport'  => 'ios12PickSwitchportCommand',
 	'ios12-get8021q-readvlan'  => 'ios12PickVLANCommand',
@@ -41,10 +42,7 @@ $breedfunc = array
 	'vrp55-getallconf-main'    => 'vrp5xSpotConfigText',
 	'nxos4-getcdpstatus-main'  => 'ios12ReadCDPStatus',
 	'nxos4-getlldpstatus-main' => 'nxos4ReadLLDPStatus',
-	'nxos4-get8021q-main'      => 'nxos4Read8021QConfig',
-	'nxos4-get8021q-top'       => 'nxos4ScanTopLevel',
-	'nxos4-get8021q-readport'  => 'nxos4PickSwitchportCommand',
-	'nxos4-get8021q-readvlan'  => 'nxos4PickVLANCommand',
+	'nxos4-get8021q-main'      => 'ios12ReadVLANConfig',
 	'nxos4-getportstatus-main' => 'ciscoReadInterfaceStatus',
 	'nxos4-getmaclist-main'    => 'nxos4ReadMacList',
 	'nxos4-xlatepushq-main'    => 'nxos4TranslatePushQueue',
